fix (task-16): gaps hot fix

--- a/frontend/landing/src/components/Buttons/Launch/Launch.scss
+++ b/frontend/landing/src/components/Buttons/Launch/Launch.scss
@@ -85,7 +85,7 @@
         }
 
         &-Mask {
-            width: 58.4vw;
+            width: 58.1vw;
             height: auto;
         }
     }
