--- a/frontend/landing/src/components/Sections/Main/Main.scss
+++ b/frontend/landing/src/components/Sections/Main/Main.scss
@@ -33,9 +33,9 @@
 
             &-pill-bottom-left {
                 position: absolute;
-                width: 65px;
+                width: 80px;
                 height: auto;
-                top: 250px;
+                top: 280px;
                 left: -60px;
                 filter: drop-shadow(0 0 30px rgba(255, 255, 255, 0.2));
             }
@@ -80,7 +80,7 @@
                 &-pill-bottom {
                     width: 9vw;
                     height: auto;
-                    top: 20vw;
+                    top: 18vw;
                     left: 18vw;
                 }
 
