--- a/frontend/landing/src/styles/global.scss
+++ b/frontend/landing/src/styles/global.scss
@@ -108,7 +108,7 @@ a {
     .Background-TopRight {
         width: 32vw;
         height: auto;
-        top: 12vw;
+        top: 10vw;
     }
 
     .Background-Top {
